--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -2,9 +2,6 @@
 :root {
 
         --topnav-background-color: #fffefb;
-
-
-        
         --background-color: #fffefb;
         --background-color-button: #ffffff;
 
@@ -307,13 +304,57 @@
         --learning_center-header-bg-color: linear-gradient(180deg,
                         rgba(244, 248, 248, 0.05) 0.13%,
                         rgba(244, 248, 248, 0) 99.87%);
+        --home-background-color: #E4EEF0;
+        --home-background-color-child: #ffffff;
+        --home-title-color: #27282C;
+        --home-text-color: rgba(39, 40, 44, 0.8);
+        --home-Key_Players_In_bg: url('@/assets/images/Key_Players_In_bg_black.png');
+        --home-swiper-button-disabled: rgba(32, 32, 34, 0.618);
+        --home-swiper-button-disabled-border: none;
+        --home-Join_the_UtilityNet_button-border: #000;
+        --home-Join_the_UtilityNet_button-background: linear-gradient(180deg,
+                        rgba(255, 255, 255, 0.2) 0%,
+                        rgba(0, 255, 245, 0.2) 100%);
+        --home-Key_Players_In_Gear_wheel_button: #27282C;
 
 
+        --unc-tkoen-header_content_box-border: #c1c1c1;
+        --unc-tkoen-header_content_box-background: #f9fcfc;
+        --unc-figure_round_number: #000;
 
+
+        --search-ut_search-border: rgba(28, 28, 27, 0.8);
 }
 
 /* 暗色主题样式 */
 .dark-theme {
+        --unc-tkoen-header_content_box-border: #2a3433;
+        --unc-tkoen-header_content_box-background: linear-gradient(180deg, #24272e 0%, #2b3735 100%);
+        --unc-figure_round_number: #00fff5;
+
+        --search-ut_search-border: rgba(255, 254, 251, 0.2);
+
+        --home-Key_Players_In_Gear_wheel_button: #fff;
+        --home-background-color: #151517;
+        --home-background-color-child: #1B1B1B;
+        --home-title-color: #FFFEFB;
+        --home-text-color: rgba(255, 254, 251, 0.8);
+        --home-Key_Players_In_bg: url('@/assets/images/Key_Players_In_bg.png');
+        --home-swiper-button-disabled: #202022;
+        --home-swiper-button-disabled-border: 1px solid #222222;
+        --home-Join_the_UtilityNet_button-border: #00fff5;
+        --home-Join_the_UtilityNet_button-background: linear-gradient(180deg,
+                        rgba(0, 255, 245, 0.2) 0%,
+                        rgba(0, 153, 147, 0.2) 100%);
+
+
+
+
+
+
+
+
+
         --topnav-background-color: #333333;
 
         --learning_center-header-bg-color: rgba(0, 0, 0, 0.7);
