--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -153,6 +153,7 @@
         --utility_explain-options_item-border: 1px solid #d9d9d5;
         --utility_explain-options_item-border1: 1px solid #3EDFCF;
         --utility_explain-options_item_header_icon-shadow: none;
+        --utility_explain-message_card_list_item_title1: linear-gradient(90deg, #000 0%, #73FBF0 100%);
 
 
 
@@ -167,6 +168,8 @@
         //!root learning_center页面
         --learning-center-what-bg: #fffefb;
         --learning-center-what-bg1: #fffefb;
+        --learning-center-what-bg2: #d7f4f1;
+        --learning-center-what-bg3: #beefea;
         --learning-center-what-shadow: rgba(228, 233, 232, 0.5);
         --learning-center-brightness: 1;
         --learning-center-section_right-bg: linear-gradient(90deg,
@@ -430,7 +433,7 @@
         --community-bgc-phone: url("@/assets/images/phone_community-dark.png") no-repeat;
         --poci_consensus-bgc: url("@/assets/images/poci_consensus_background.png") no-repeat;
         --poci_consensus-bgc-phone: url("@/assets/images/poci_consensus-dark.png") no-repeat;
-        --learning_center-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
+        --learning_center-bgc-phone: url('@/assets/images/learning_center.jpg') no-repeat center;
         --middle_message_introduce-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
         --mp_ai_model-bgc-phone: url("@/assets/images/same.png") no-repeat;
         --mp_utility_wallet-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_utility_wallet.png") no-repeat;
@@ -473,6 +476,8 @@
         //! learning_center页面
         --learning-center-what-bg: rgba(21, 28, 26);
         --learning-center-what-bg1: rgba(21, 28, 26);
+        --learning-center-what-bg2: rgba(21, 28, 26);
+        --learning-center-what-bg3: rgba(21, 28, 26);
         --learning-center-what-shadow: rgba(228, 233, 232, 0);
         --learning-center-brightness: 100;
         --learning-center-section_right-bg: linear-gradient(90deg,
@@ -502,6 +507,7 @@
         --utility_explain-options_item-border1: 1px dashed #3EDFCF;
         --utility_explain-options_item_header_icon-shadow: #3edfcf 0px 0px 8px 0px;
 
+        --utility_explain-message_card_list_item_title1: linear-gradient(90deg, #737efb 0%, #73fbf0 100%);
 
 
 
