--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -61,7 +61,7 @@ input[type="checkbox"] {
 img {
     max-width: 100%;
     max-height: 100%;
-    vertical-align: middle;
+    vertical-align: middle; // 图片垂直居中
 }
 
 ul {
