https://unc-oss.s3.us-west-1.amazonaws.com/v2/

--- a/src/assets/styles/theme.less
+++ b/src/assets/styles/theme.less
@@ -13,7 +13,7 @@
 
 
         // !root home页面的主题样式
-        --home-star-bg: url("@/assets/images/star_bg.png") no-repeat;
+        --home-star-bg: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/star_bg.png") no-repeat;
         --where-color: rgba(21, 28, 26, 0.9);
         --background-start: #fff;
         --background-end: rgba(255, 255, 255, 0);
@@ -228,7 +228,7 @@
 
         --learning_center-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_learning_center.png") no-repeat;
         --middle_message_introduce-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/phone_learning_center.png") no-repeat;
-        --mp_ai_model-bgc-phone: url("@/assets/images/normal.png") no-repeat;
+        --mp_ai_model-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/normal.png") no-repeat;
         --mp_utility_wallet-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_wallet_logo.png") no-repeat;
         --mp_hashing_power-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_power_logo.png") no-repeat;
         --mp_mining_tool-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_tool_logo.png") no-repeat;
@@ -288,7 +288,7 @@
                         #8bfff8 45.98%,
                         rgba(139, 255, 248, 0) 97.01%);
 
-        --second-phone-home-data_value-bg: url('@/assets/images/star_bg_phone.png') no-repeat;
+        --second-phone-home-data_value-bg: url('https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/star_bg_phone.png') no-repeat;
         --second-phone-home-box_item-border: 1px solid rgba(21, 28, 26, 0.07);
         --amout-color: #849b96;
         --item_img-color: linear-gradient(97deg, #c2f7ef 0.47%, rgba(164, 229, 221, 0.00) 100.1%);
@@ -303,7 +303,7 @@
         --Create_a_lighter-filter: blur(4px);
         --button_right-shadow: 0px 4px 20px 0px rgba(156, 255, 243, 0.3);
         --section_side_opacity-bgc: linear-gradient(177deg, #fff -24.77%, rgba(255, 255, 255, 0) 7.53%);
-        --learning_center-header-bg: url("@/assets/images/learning_center_background.png");
+        --learning_center-header-bg: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/learning_center_background.png");
         --learning_center-header-bg-color: linear-gradient(180deg,
                         rgba(244, 248, 248, 0.05) 0.13%,
                         rgba(244, 248, 248, 0) 99.87%);
@@ -311,7 +311,7 @@
         --home-background-color-child: #ffffff;
         --home-title-color: #27282C;
         --home-text-color: rgba(39, 40, 44, 0.8);
-        --home-Key_Players_In_bg: url('@/assets/images/Key_Players_In_bg_black.png');
+        --home-Key_Players_In_bg: url('https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/Key_Players_In_bg_black.png');
         --home-swiper-button-disabled: rgba(32, 32, 34, 0.618);
         --home-swiper-button-disabled-border: none;
         --home-Join_the_UtilityNet_button-border: #000;
@@ -342,7 +342,7 @@
         --home-background-color-child: #1B1B1B;
         --home-title-color: #FFFEFB;
         --home-text-color: rgba(255, 254, 251, 0.8);
-        --home-Key_Players_In_bg: url('@/assets/images/Key_Players_In_bg.png');
+        --home-Key_Players_In_bg: url('https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/Key_Players_In_bg.png');
         --home-swiper-button-disabled: #202022;
         --home-swiper-button-disabled-border: 1px solid #222222;
         --home-Join_the_UtilityNet_button-border: #00fff5;
@@ -363,7 +363,7 @@
         --learning_center-header-bg-color: rgba(0, 0, 0, 0.7);
 
         --background-header_content_button: linear-gradient(113deg, #ca00c1 4.34%, #00f7e4 92.98%);
-        --learning_center-header-bg: url("@/assets/images/learning_center.jpg");
+        --learning_center-header-bg: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/learning_center.jpg");
 
         --section_side_opacity-bgc: linear-gradient(177deg,
                         #3d534e 34.77%,
@@ -398,7 +398,7 @@
                         #fff 49.95%,
                         rgba(255, 255, 255, 0) 100.26%);
 
-        --second-phone-home-data_value-bg: url('@/assets/images/star_bg_dark_phone.png') no-repeat;
+        --second-phone-home-data_value-bg: url('https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/star_bg_dark_phone.png') no-repeat;
         --second-phone-home-box_item-border: 1px solid rgba(255, 254, 251, 0.2);
 
         // * second   ------- end  ----------------------------------------------------------------------------------------------------------------------------------------------------
@@ -423,19 +423,19 @@
         --poci-bgc: rgba(21, 28, 26, 0.9);
         // ~ 手机端 end  ----------------------------------------------------------------------------------------------------------------------------------------------------
 
-        --unc-token-bgc: url("@/assets/images/unc_token_background.jpg") no-repeat;
-        --unc-token-bgc-phone: url("@/assets/images/phone_unc_token-dark.png") no-repeat;
+        --unc-token-bgc: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/unc_token_background.jpg") no-repeat;
+        --unc-token-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/phone_unc_token-dark.png") no-repeat;
         --docs-bgc: #141817;
         --docs-bgc-phone: #000;
-        --utility_explain-bgc: url("@/assets/images/utility_explain.png") no-repeat;
-        --utility_explain-bgc-phone: url("@/assets/images/utility_explain-dark.png") no-repeat;
+        --utility_explain-bgc: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/utility_explain.png") no-repeat;
+        --utility_explain-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/utility_explain-dark.png") no-repeat;
 
-        --community-bgc-phone: url("@/assets/images/phone_community-dark.png") no-repeat;
-        --poci_consensus-bgc: url("@/assets/images/poci_consensus_background.png") no-repeat;
-        --poci_consensus-bgc-phone: url("@/assets/images/poci_consensus-dark.png") no-repeat;
-        --learning_center-bgc-phone: url('@/assets/images/learning_center.jpg') no-repeat center;
-        --middle_message_introduce-bgc-phone: url("@/assets/images/learning_center-dark.png") no-repeat;
-        --mp_ai_model-bgc-phone: url("@/assets/images/same.png") no-repeat;
+        --community-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/phone_community-dark.png") no-repeat;
+        --poci_consensus-bgc: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/poci_consensus_background.png") no-repeat;
+        --poci_consensus-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/poci_consensus-dark.png") no-repeat;
+        --learning_center-bgc-phone: url('https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/learning_center.jpg') no-repeat center;
+        --middle_message_introduce-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/learning_center-dark.png") no-repeat;
+        --mp_ai_model-bgc-phone: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/same.png") no-repeat;
         --mp_utility_wallet-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_utility_wallet.png") no-repeat;
         --mp_hashing_power-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_hashing_power.png") no-repeat;
         --mp_mining_tool-bgc-phone: url("https://entysquare.oss-cn-shenzhen.aliyuncs.com/unc/images/mp_mining_tool.png") no-repeat;
@@ -546,7 +546,7 @@
 
 
         // !home页面的主题样式
-        --home-star-bg: url("@/assets/images/star_bg_black.png") no-repeat;
+        --home-star-bg: url("https://unc-oss.s3.us-west-1.amazonaws.com/v2/images/star_bg_black.png") no-repeat;
 
         --where-color: #3EDFCF; // Where_to_Start
         --background-start: #373737;
